Implementing Navigation Compose with Bottom Navigation Bar (Fix Done)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">SiPolan</string>
+
+    <!-- Navigation Bottom -->
+    <string name="navitem_first">Home</string>
+    <string name="navitem_second">Profile</string>
+    <string name="navitem_third">Deteksi</string>
 </resources>
