--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="navitem_second">Profile</string>
     <string name="navitem_third">Deteksi</string>
 
+    <!-- Splash Screen -->
+    <string name="splashscreen_contentdesc">Si Polan Aplikasi Pendeteksi Pelanggaran Lalu Lintas</string>
+
     <!-- Onboarding Screen -->
     <string name="onboarding_title">Welcome to Si Polan</string>
     <string name="onboarding_subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
