--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,15 @@
     <!-- SignIn Screen -->
     <string name="signin_title">Sign In</string>
     <string name="signin_subtitle">Masukkan data anda</string>
+    <string name="signin_input_email">Masukkan Email</string>
+    <string name="signin_input_pass">Masukkan Password</string>
+    <string name="signin_forgot">Lupa Passwword?</string>
+    <string name="signin_button">Sign In</string>
+    <string name="signin_divider">\u0020Atau Lanjut Dengan\u0020</string>
+    <string name="signin_no_account">Belum memiliki akun?</string>
+    <string name="signin_signup">\u0020Daftar Di sini</string>
+    <string name="login_fb">Login Facebook</string>
+    <string name="login_google">Login Google</string>
 
     <!-- Profile Screen -->
     <string name="setting1">Edit Akun</string>
