--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,9 @@
     <!-- Artikel Screen -->
     <string name="artikel_cari">Cari Artikel</string>
     <string name="artikel_selengkapnya">Selengkapnya</string>
+    <string name="detailbayar_jenis">Jenis Pelanggaran</string>
+    <string name="detailbayar_plat">Plat Kendaraan</string>
+    <string name="detailbayar_tgl">Tanggal</string>
+    <string name="detailbayar_melalui">Bayar Melalui</string>
 
 </resources>
