Changing hardcoded text into string on DetailBayarScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,8 @@
     <!-- Artikel Screen -->
     <string name="artikel_cari">Cari Artikel</string>
     <string name="artikel_selengkapnya">Selengkapnya</string>
+
+    <!-- Detail Bayar Screen -->
     <string name="detailbayar_jenis">Jenis Pelanggaran</string>
     <string name="detailbayar_plat">Plat Kendaraan</string>
     <string name="detailbayar_tgl">Tanggal</string>
