--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,5 +83,9 @@
     <string name="detailpelanggaran_tgl">Tanggal</string>
     <string name="detailpelanggaran_total">Total Biaya</string>
     <string name="detailpelanggaran_bayar">Bayar Denda</string>
+    <string name="deteksi_pelanggaran1">Tidak menggunakan sabuk pengaman</string>
+    <string name="deteksi_pelanggaran2">Tidak menggunakan helm</string>
+
+    <!-- -->
 
 </resources>
