--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,15 +77,20 @@
     <string name="detailbayar_tgl">Tanggal</string>
     <string name="detailbayar_melalui">Bayar Melalui</string>
 
-    <!-- Detail Pelanggaran -->
+    <!-- Detail Pelanggaran Screen -->
     <string name="detailpelanggaran_jenis">Jenis Pelanggaran</string>
     <string name="detailpelanggaran_plat">Plat Kendaraan</string>
     <string name="detailpelanggaran_tgl">Tanggal</string>
     <string name="detailpelanggaran_total">Total Biaya</string>
     <string name="detailpelanggaran_bayar">Bayar Denda</string>
+
+    <!-- Deteksi Screen -->
+
     <string name="deteksi_pelanggaran1">Tidak menggunakan sabuk pengaman</string>
     <string name="deteksi_pelanggaran2">Tidak menggunakan helm</string>
 
-    <!-- -->
+    <!-- Home Screen -->
+    <string name="home_today">Pelanggaran Hari Ini</string>
+    <string name="home_artikel">Artikel Terbaru</string>
 
 </resources>
