Changing hardcoded text into string on KonfirmasiPembayaranScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,10 @@
     <string name="home_today">Pelanggaran Hari Ini</string>
     <string name="home_artikel">Artikel Terbaru</string>
 
+
+    <!-- Konfirmasi Bayar Screen -->
+    <string name="konfirmasi_title">Upload Bukti Pembayaran</string>
+    <string name="konfirmasi_text">1. Proses validasi pembayaran paling lama 2x24 jam.\n2. Anda akan mendapat notifikasi via Email setelah proses validasi selesai\n</string>
+    <string name="konfirmasi_upload">Upload Image</string>
+
 </resources>
